--- a/views/user_settings.ejs
+++ b/views/user_settings.ejs
@@ -1,19 +1,27 @@
 <div class="form box">
-    <h2 class="settings-username-title">User settings</h2>
+    <h2 class="settings-username-title">User Panel</h2>
 
     <div class="settings-content">
         <div class="bordered content">
             <h3>Address' List</h3>
-            <ul class="address-list">
-                <li>Address 1</li>
+            <ul class="address-list list">
+
                 <li>
                     <a href="#users/create_address" class='create-address-link'>Create Address</a>
                 </li>
             </ul>
         </div>
         <div class="bordered content">
+            <h3>Order List</h3>
+            <ul class="order-list list">
+                <li>
+                    <a href="#users/create_order" class='create-order-link'>Create New Order</a>
+                </li>
+            </ul>
+        </div>
+        <div class="bordered content">
             <h3>Site theme</h3>
-            <ul class="address-list">
+            <ul class="color-list list">
                 <li>Blue</li>
                 <li>Red</li>
                 <li>Silver</li>
