--- a/views/order_item.ejs
+++ b/views/order_item.ejs
@@ -1,1 +1,1 @@
-<li>Order #<%=this.order.order_id%> - Address: <%=(this.address) ? this.address.full_name : "Not Set" %> - <a href="#" class="select-order">Set as Current Order</a></li>
+<li><a href="#users/order&id=<%=this.order.order_id%>">Order #<%=this.order.order_id%></a> - Location: <%=(this.address) ? this.address.full_name : "Not Set" %> - <a href="#" class="select-order">Set as Current Order</a></li>
