--- a/views/user_settings.ejs
+++ b/views/user_settings.ejs
@@ -15,7 +15,7 @@
             <h3>Order List</h3>
             <ul class="order-list list">
                 <li>
-                    <a href="#users/create_order" class='create-order-link'>Create New Order</a>
+                    <a href="#" class='create-order-link'>Create New Order</a>
                 </li>
             </ul>
         </div>
