--- a/views/user_settings.ejs
+++ b/views/user_settings.ejs
@@ -5,7 +5,6 @@
         <div class="bordered content">
             <h3>Address' List</h3>
             <ul class="address-list list">
-
                 <li>
                     <a href="#users/create_address" class='create-address-link'>Create Address</a>
                 </li>
@@ -22,9 +21,9 @@
         <div class="bordered content">
             <h3>Site theme</h3>
             <ul class="color-list list">
-                <li>Blue</li>
-                <li>Red</li>
-                <li>Silver</li>
+                <li class="color-blue">Blue</li>
+                <li class="color-red">Red</li>
+                <li class="color-green">Green</li>
             </ul>
         </div>
     </div>
