--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -371,6 +371,8 @@ h1,h2,h3,h4,h5,h6 {
     padding: 0 0 0 10px;
     z-index: 1000;
     position:absolute;
+    cursor: pointer;
+
 }
 
 #cart .cart-n button{
