--- a/views/cart_item.ejs
+++ b/views/cart_item.ejs
@@ -16,8 +16,10 @@
 
             </div>
             <div class="cart-n">
-                <span class='cart-n-label'>Amount:</span>
-                <span class='cart-n-value'><%=this.amount%></span>
+                <a href="#" class="amount">
+                    <span class='cart-n-label'>Amount:</span>
+                    <span class='cart-n-value'><%=this.amount%></span>
+                </a>
                 <button class='item-up-btn'>Up</button>
                 <button class='item-down-btn'>Down</button>
             </div>
