change password and jstorage expiry date

--- a/views/user_settings.ejs
+++ b/views/user_settings.ejs
@@ -26,5 +26,23 @@
                 <li class="color-green">Green</li>
             </ul>
         </div>
+
+        <div class="bordered content">
+            <h3>Password Change</h3>
+
+            <form action="/" method="post">
+                <div class="form_item">
+                    <span class="label panel-old-password-label">Old Password:</span>
+                    <input type="password" id="panel-password" name="password" class="input"/>
+                </div>
+                <div class="form_item">
+                    <span class="label panel-new-password-label">New Password:</span>
+                    <input type="password" id="panel-password2" name="password" class="input"/>
+                </div>
+                <div class="form_item">
+                    <input type="button" value="Change Password" class="change-pass-button form_button"/>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
