--- a/views/register.ejs
+++ b/views/register.ejs
@@ -24,7 +24,12 @@
         </div>
         <div class="form_item">
             <span class="label register-birth-date-label">Birth date:</span>
-            <input type="text" id="reg-birth-date" name="email" class="register-email-label input"/>
+            <select id="day_drop_down">
+            </select>
+            <select id="month_drop_down">
+            </select>
+            <select id="year_drop_down">
+            </select>
         </div>
         <div class="form_item">
             <input type="button" value="Register" class="register-button-label form_button"/>
