--- a/views/user_settings.ejs
+++ b/views/user_settings.ejs
@@ -77,6 +77,16 @@
                     <input type="text" id="panel-new-email" value="<%= Qck.current_user.email%>" name="new-email" class="input"/>
                 </div>
                 <div class="form_item">
+                <span class="label update-birth-date-label">Birth date:</span>
+                <select id="day_drop_down">
+                </select>
+                <select id="month_drop_down">
+                </select>
+                <select id="year_drop_down">
+            </select>
+        </div>
+        <div class="form_item">
+                <div class="form_item">
                     <input type="button" value="Submit Changes" class="change-pass-button form_button"/>
                 </div>
             </form>
