language combo box parte 1

--- a/views/languages.ejs
+++ b/views/languages.ejs
@@ -1,4 +1,7 @@
-<form id='languages'action=''><select id='l_languages'><%= this.each(function(index, item) { %>
-                        <option value='<%= item.id %>'><%= item.name %></option>
-                   <%= })%>
-</select></form>
+<form id='languages' action=''>
+    <select id='l_languages'>
+        <% $.each(this,function(index, item) { %>
+                        <option value='<%= item.id %>'<% if(item.id == current_language){%> selected='selected' <% }; %> ><%= item.name %></option>
+                   <% });%>
+    </select>
+</form>
