--- a/views/logged.ejs
+++ b/views/logged.ejs
@@ -1,1 +1,1 @@
-<span id='welcome'>Bienvenido <%= this.username %></span> | <span id='settings'><a href="#users/user_panel">User Panel</a><span/>  | <span id='sign_out'><a href="/">Sign out</a><span/> | <a href="/languages">English ∆</a>
+<span id='welcome'>Bienvenido <%= this.username %></span> | <span id='settings'><a href="#users/user_panel">User Panel</a><span/>  | <span id='sign_out'><a href="/">Sign out</a><span/> | <span id="languages"></span>
