--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,1 +1,1 @@
-<span id='sign_in'><a href="/">Sign in</a></span> or <span id='sign_up'><a href="#users/sign_up">Sign up</a><span/> | <span id='l_choose'></span>
+<span id='sign_in'><a href="/">Sign in</a></span> or <span id='sign_up'><a href="#users/sign_up">Sign up</a><span/> | <span id='languages'></span>
