--- a/views/product_list.ejs
+++ b/views/product_list.ejs
@@ -8,12 +8,12 @@
         </div>
         <% } %>
         <div class="filter">
-            <div class="filter-order-text filter-text">
+            <div id="filter" class="filter-order-text filter-text">
                 Order:
             </div>
             <div id="radio" class="filter-sel">
-                <input type="radio" id="name_asc" name="radio" checked="checked"/><label for="name_asc">Ascending</label>
-                <input type="radio" id="name_desc" name="radio"/><label for="name_desc">Descending</label>
+                <input type="radio" id="name_asc" name="radio" checked="checked"/><label id='name_asc_label' for="name_asc">Ascending</label>
+                <input type="radio" id="name_desc" name="radio"/><label id='name_desc_label' for="name_desc">Descending</label>
             </div>
         </div>
         <div class="clear"></div>
