--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -1,8 +1,6 @@
 
 <div class="box" id="categories-sidebar">
-    <h3>
-    Categories
-    </h3>
+    <h3><span id='categories'>Categories</span></h3>
     <ul>
     <% for(var i = 0; i < this.categories.length; i++) { %>
             <li id="category-<%=this.categories[i].id%>" class="category">
