--- a/views/autocomplete_item.ejs
+++ b/views/autocomplete_item.ejs
@@ -3,7 +3,7 @@
         <img src="<%=this.item.image_url%>" alt="img" height="40" width="40"/>
         <b><%=this.item.name%></b>
         <br/>
-        <span>Precio: <%=this.item.price%>$</span>
+        <span><%=this.item.price%>$</span>
     </a>
     <div class="clear"></div>
 </li>
