--- a/views/logged.ejs
+++ b/views/logged.ejs
@@ -1,1 +1,8 @@
-<span id='welcome'><%= $('topbar welcome',this.lang).text() %><%= this.username %></span> | <span id='settings'><a href="#users/user_panel"><%= $('topbar user_panel',this.lang).text() %></a><span/>  | <span id='sign_out'><a href="/"><%= $('topbar sign_out',this.lang).text() %></a><span/> | <span id="languages"></span>
+<div id="languages"></div>
+
+<div class="content">
+<span id='welcome'><%= $('topbar welcome',this.lang).text() %><%= this.username %></span> | <span id='settings'><a href="#users/user_panel"><%= $('topbar user_panel',this.lang).text() %></a><span/>  | <span id='sign_out'><a href="/"><%= $('topbar sign_out',this.lang).text() %></a><span/> |
+</div>
+
+<div class="clear"> </div>
+
