--- a/views/product_item.ejs
+++ b/views/product_item.ejs
@@ -8,15 +8,15 @@
       <img src="<%=this.product.image_url%>" alt="" height='100'/>
     </a>
     <p class="attribute">
-      <span class="label">
-        Rank:
+      <span class="sales_rank_label">
+        Sales Rank:
       </span>
       <span class="sales_rank">
         <%=this.product.sales_rank%>
       </span>
     </p>
     <p class="attribute">
-      <span class="label">
+      <span class="price_label">
         Price:
       </span>
       <span class="price">
