--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,1 +1,6 @@
-<span id='sign_in'><a href="/"><%= $('topbar sign_in',this).text() %></a></span> <span id="or"><%= $('topbar or',this).text() %></span> <span id='sign_up'><a href="#users/sign_up"><%= $('topbar sign_up',this).text() %></a><span/> | <span id='languages'></span>
+<div id='languages'></div>
+                    <div class="content">
+                        <a href="/"><span lang="l_sign_in" id='sign_in'<%= $('topbar sign_in',this).text() %></span></a> <span id="or"><%= $('topbar or',this).text() %></span> <a href="#users/sign_up">
+                        <span id='sign_up'><%= $('topbar sign_up',this).text() %></span></a> |
+                    </div>
+                    <div class='clear'></div>
