--- a/views/product_show.ejs
+++ b/views/product_show.ejs
@@ -16,7 +16,7 @@
             <%= $('product_label price', Qck.locale[current_language]).text() %>
         </span>
         <span class="price">
-            <%= this.product.price %>
+            <%= this.product.price %>$
         </span>
     </p>
     <p class="attribute">
