fix lang register

--- a/views/logged.ejs
+++ b/views/logged.ejs
@@ -1,7 +1,7 @@
 <div id="languages"></div>
 
 <div class="content">
-<span id='welcome'><%= $('topbar welcome',this.lang).text() %><%= this.username %></span> | <span id='settings'><a href="#users/user_panel"><%= $('topbar user_panel',this.lang).text() %></a><span/>  | <span id='sign_out'><a href="/"><%= $('topbar sign_out',this.lang).text() %></a><span/> |
+<span id='welcome'><%= $('topbar welcome',this.lang).text() %><%= this.username %></span> | <a href="#users/user_panel" id='user_panel'><%= $('topbar user_panel',this.lang).text() %></a>  | <a href="/" id='sign_out'><%= $('topbar sign_out',this.lang).text() %></a> |
 </div>
 
 <div class="clear"> </div>
