--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,7 +15,7 @@
             <input type="password" id="reg-password" name="password" class="register-name-label input"/>
         </div>
         <div class="form_item">
-            <span class="label register-password-label"><%= $('reg_labels re_password',Qck.locale[current_language]).text() %></span>
+            <span class="label register-password2-label"><%= $('reg_labels re_password',Qck.locale[current_language]).text() %></span>
             <input type="password" id="reg-password2" name="password" class="register-name-label input"/>
         </div>
         <div class="form_item">
